# tacocopter

./: README.md
configurator/: index.html  package.json  tailwind.config.js
configurator/src/: App.tsx  BlackboxInterface.tsx  CalibrationInterface.tsx  ElrsInterface.tsx  LogInterface.tsx  MainInterface.tsx  PIDConfigInterface.tsx  global.css  main.tsx  types.tsx
configurator/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
configurator/src-tauri/src/: lib.rs  main.rs
configurator/src/config_interface/: BasicControlsInterface.tsx  BlackboxInterface.tsx  CalibrationInterface.tsx  ConfigurationInterface.tsx  PassthroughInterface.tsx
firmware/: Cargo.toml  build.rs  link_ram_cortex_m.x  memory.x  out.uf2  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: altitude_estimator.rs  consts.rs  elrs.rs  global.rs  kalman.rs  m100_gps.rs  main.rs  moving_average.rs  mpu6050.rs  pm02d.rs  setup.rs  tc_log.rs
firmware/src/drivers/: bmp390.rs  dshot.rs  dshot_pio.rs  hc_sr04.rs  m100_gps.rs  mod.rs  pm02d.rs  tc_log.rs  tc_store.rs
firmware/src/drivers/elrs/: elrs_rx.rs  elrs_tx_packets.rs  mod.rs
firmware/src/drivers/esc/: dshot_encoder.rs  dshot_pio.rs  mod.rs
firmware/src/drivers/esc/blheli_passthrough/: four_way.rs  mod.rs  msp.rs
firmware/src/drivers/tc_store/: blackbox.rs  lfs2.rs  mod.rs  storage.rs  types.rs
firmware/src/setup/: barometer.rs  clock.rs  flash.rs  i2c.rs  imu.rs  mod.rs  peripherals.rs  tasks.rs  usb.rs
firmware/src/tasks/: blheli_handler.rs  bmp390_handler.rs  control_loop.rs  dshot_handler.rs  elrs_transmitter.rs  esc_handler.rs  gps_handler.rs  imu_loops.rs  mod.rs  position_hold_loop.rs  ultrasonic_handler.rs  usb_updater.rs
firmware/src/tasks/realtime/: control_loop.rs  esc_loop.rs  imu_loop.rs  mod.rs  position_hold_loop.rs
firmware/src/tools/: altitude_estimator.rs  array.rs  blinker.rs  kalman.rs  mod.rs  other_task_runner.rs  sorting.rs  yielding_timer.rs
firmware/src/tools/calibrators/: imu.rs
hardware/fc_board_designs/fc_pcb_v0.1/: TacoCopter_Flight_Controller-B_Cu.gbl  TacoCopter_Flight_Controller-B_Cu.gbr  TacoCopter_Flight_Controller-B_Mask.gbr  TacoCopter_Flight_Controller-B_Mask.gbs  TacoCopter_Flight_Controller-B_Paste.gbp  TacoCopter_Flight_Controller-B_Paste.gbr  TacoCopter_Flight_Controller-B_Silkscreen.gbo  TacoCopter_Flight_Controller-B_Silkscreen.gbr  TacoCopter_Flight_Controller-Edge_Cuts.gbr  TacoCopter_Flight_Controller-Edge_Cuts.gm1  TacoCopter_Flight_Controller-F_Cu.gbr  TacoCopter_Flight_Controller-F_Cu.gtl  TacoCopter_Flight_Controller-F_Mask.gbr  TacoCopter_Flight_Controller-F_Mask.gts  TacoCopter_Flight_Controller-F_Paste.gbr  TacoCopter_Flight_Controller-F_Paste.gtp  TacoCopter_Flight_Controller-F_Silkscreen.gbr  TacoCopter_Flight_Controller-F_Silkscreen.gto  TacoCopter_Flight_Controller-NPTH-drl_map.gbr  TacoCopter_Flight_Controller-NPTH.drl  TacoCopter_Flight_Controller-PTH-drl_map.gbr  TacoCopter_Flight_Controller-PTH.drl  TacoCopter_Flight_Controller-job.gbrjob
hardware/fc_board_designs/fc_pcb_v0.1.1/: TacoCopter_Flight_Controller-B_Cu.gbl  TacoCopter_Flight_Controller-B_Mask.gbs  TacoCopter_Flight_Controller-B_Paste.gbp  TacoCopter_Flight_Controller-B_Silkscreen.gbo  TacoCopter_Flight_Controller-Edge_Cuts.gm1  TacoCopter_Flight_Controller-F_Cu.gtl  TacoCopter_Flight_Controller-F_Mask.gts  TacoCopter_Flight_Controller-F_Paste.gtp  TacoCopter_Flight_Controller-F_Silkscreen.gto  TacoCopter_Flight_Controller-NPTH-drl_map.gbr  TacoCopter_Flight_Controller-NPTH.drl  TacoCopter_Flight_Controller-PTH-drl_map.gbr  TacoCopter_Flight_Controller-PTH.drl  TacoCopter_Flight_Controller-job.gbrjob
hardware/fc_board_designs/fc_pcb_v0.1.2/: TacoCopter_Flight_Controller-B_Cu.gbl  TacoCopter_Flight_Controller-B_Mask.gbs  TacoCopter_Flight_Controller-B_Paste.gbp  TacoCopter_Flight_Controller-B_Silkscreen.gbo  TacoCopter_Flight_Controller-Edge_Cuts.gm1  TacoCopter_Flight_Controller-F_Cu.gtl  TacoCopter_Flight_Controller-F_Mask.gts  TacoCopter_Flight_Controller-F_Paste.gtp  TacoCopter_Flight_Controller-F_Silkscreen.gto  TacoCopter_Flight_Controller-NPTH-drl_map.gbr  TacoCopter_Flight_Controller-NPTH.drl  TacoCopter_Flight_Controller-PTH-drl_map.gbr  TacoCopter_Flight_Controller-PTH.drl  TacoCopter_Flight_Controller-job.gbrjob
tc_interface/: Cargo.toml
tc_interface/src/: lib.rs
