[package]
edition = "2021"
name = "firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# After getting got twice by this, I now am solely using the GitHub version (rather than from crates.io) of
# Embassy because for some reason there is different behavior and visibility in the GitHub version (idk why).
embassy-embedded-hal = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev = "206a324cf4d612122356fb350b4a3b56391d6f20", features = ["defmt"] }
embassy-sync = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", rev = "206a324cf4d612122356fb350b4a3b56391d6f20", features = ["defmt"] }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", rev = "206a324cf4d612122356fb350b4a3b56391d6f20", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "nightly"] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "206a324cf4d612122356fb350b4a3b56391d6f20", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "206a324cf4d612122356fb350b4a3b56391d6f20", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "206a324cf4d612122356fb350b4a3b56391d6f20", features = ["defmt"] }
embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy", rev = "206a324cf4d612122356fb350b4a3b56391d6f20" }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.8"
heapless_7 = { package = "heapless", version = "0.7.17" }
usbd-hid = "0.8.1"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.8.5", default-features = false }
bmp390 = "0.4.1"
tc_interface = { version = "0.1.0", path = "../tc_interface" }
postcard = "1.1.1"
mpu6050 = "0.1.6"
micromath = "2.1.0"
nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }
pio = "0.3.0"
pio-proc = "0.3.0"
pid = "4.0.0"
uom = { version = "0.36", default-features = false, features = ["autoconvert", "f32", "f64", "si"] }
dshot-pio = { git = "https://github.com/njfdev/dshot-pio.git", features = ["embassy-rp"] }
format_no_std = "1.2.0"
sequential-storage = { version = "4.0.3", features = ["heapless"] }
littlefs2 = { version = "0.6.1", features = ["c-stubs", "log-all"]}
embedded-storage-async = "0.4.1"
paste = "1.0.15"
embedded-storage = "0.3.1"
crc = "3.3.0"
static_assertions = "1.1.0"

[patch.crates-io]
embassy-sync = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", rev = "206a324cf4d612122356fb350b4a3b56391d6f20", features = ["defmt"] }
# custom patch to make the error type derive Clone
sequential-storage = { git = "https://github.com/njfdev/sequential-storage", branch = "patch-1" }

# this is essential, if optimized by the compiler some unsafe lifetime handling will break
[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
