[package]
name = "tc_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
postcard = { version = "1.0", default-features = false }
log = { version = "0.4.27", features = ["serde"] }
